<resources>
    <string name="app_name">Meetings</string>
    <string name="chat_icon">Иконка чата</string>
    <string name="chat_arrow_right">Стрелка вправо</string>
    <string name="send">Отправить</string>
    <string name="user_avatar">Иконка пользователя</string>
    <string name="model_icon">Иконка модели</string>
    <string name="сreate_meeting">Создать встречу</string>
    <string name="meetings">Встречи</string>
    <string name="alert_will_be_archived">Текст транскрипции хранится 3 часа после завершения встречи, далее отправлять сообщения будет невозможно</string>
    <string name="hint_enter_message">Введите сообщение...</string>
    <string name="status_icon">Status Icon</string>
    <string name="meeting_name">Название встречи</string>
    <string name="meeting_name_edit">Название встречи *</string>
    <string name="time">02.04 14:34</string>
    <string name="author">Иванов С. А.</string>
    <string name="duration">12:32</string>
    <string name="message_text">Текст сообщения...</string>
    <string name="chat_name">Генератор задач</string>
    <string name="chat_dt_create">17.04.2026 14:43</string>
    <string name="meeting_processed">Обработана</string>
    <string name="meeting_archived">Архивирована</string>
    <string name="meeting_end">Закончена</string>
    <string name="meeting_new">Новая</string>
    <string name="start_time">Начало:</string>
    <string name="end_time">Окончание:</string>
    <string name="participants">Участники (12)</string>
    <string name="comment">Комментарий</string>
    <string name="link">Ссылка</string>
    <string name="meeting_author">Автор встречи:</string>
    <string name="title_meeting_history">История встреч</string>
    <string name="title_upload_file">Загрузить аудио встречи</string>
    <string name="date">30 окт. 2023 г. 12:00</string>
    <string name="waveform">waveform</string>
    <string name="delete_audio">delete_audio</string>
    <string name="clear_date_time">clear_date_time</string>
    <string name="btn_create_meeting">Создать встречу</string>
    <string name="upload_audio">Загрузить аудио-файл</string>
    <string name="select_date_time">Выберите дату и время</string>
    <string name="time_date_meeting">Дата и время встречи *</string>
    <string name="end_meeting">Завершить встречу</string>
    <string name="create_meeting">Создать встречу</string>
    <string name="search_users">Поиск участников</string>
    <string name="user">Владислав Анатольевич</string>
    <string name="participant">Участники (0)</string>
    <string name="chats_not_found">Чатов пока нет</string>
</resources>