<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/main_dark_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/ivChatIcon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_default_chat"
            android:contentDescription="@string/chat_icon"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/tvChatTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/chat_name"
                android:textColor="@color/main_white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvChatTime"
                android:text="@string/chat_dt_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/meeting_hint"/>
        </LinearLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow_right"
            android:contentDescription="@string/chat_arrow_right"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>